2002-01-24  Sam Steingold  <sds@gnu.org>

	fixed bug #506105: check semi-simple vectors&strings for overflow
	* array.d (fehler_extension): new function
	(VECTOR-PUSH-EXTEND): use it
	(fehler_dim_type): moved before semi-simple vectors&strings
	(make_ssstring, make_ssbvector): check len <= arraysize_limit_1
	(ssstring_push_extend, ssstring_extend, ssbvector_push_extend):
	check for overflow

2002-01-23  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (SEMI_SIMPLE_DEFAULT_SIZE): new constant
	* io.d (get_buffers, FORMAT-TABULATE): use it
	* stream.d (make_string_output_stream)
	(MAKE-BUFFERED-OUTPUT-STREAM): ditto

2002-01-23  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (OBJECT_OUT): new macro
	* spvw_debug.d (object_out): return obj

2002-01-23  Sam Steingold  <sds@gnu.org>

	* array.d (ssstring_extend_low): new function
	(ssstring_push_extend, ssstring_extend): use it

2002-01-22  Sam Steingold  <sds@gnu.org>

	* predtype.d (with_gc_statistics) [DEBUG_SPVW]: print a message
	when a GC is being done

2002-01-22  Sam Steingold  <sds@gnu.org>

	ANSI CL 11.1.2.1.2 #19 forbids methods with locked functions and
	specializers - check that too
	* package.d (CHECK-PACKAGE-LOCK): package may be a list of
	packages
	* init.lisp (check-redefinition): symbol maybe a method spec - a
	list of function name and specializers
	* clos.lisp (analyze-method-description): call CHECK-REDEFINITION

2002-01-21  Sam Steingold  <sds@gnu.org>

	SOCKET-STATUS now works on all handle streams, whose handles are
	acceptable to the underlying OS's select system call
	* stream.d (stream_handles): work on many streams and return 2
	handles (renamed from socket_handle)
	(handle_set, handle_isset, SOCKET-STATUS): modified accordingly
	(ChannelStream_ihandle, ChannelStream_ohandle): new macros

2002-01-18  Sam Steingold  <sds@gnu.org>

	* stream.d (stream_char_p): removed (good only for "basic streams")
	(handle_isset, stream_reset_eltype): look at strm_eltype directly
